[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ecbdata"
description = "The ecbdata API allows for easy querying of data from the ECB Data Portal: https://data.ecb.europa.eu/help/data/overview."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Luca Mingarelli", email = "luca.mingarelli@ecb.europa.eu" },
]

dependencies = [requests, pandas]

[project.urls]
Homepage = "https://pypi.org/project/ecbdata/"
Documentation = "https://github.com/LucaMingarelli/ecbdata"
Source = "https://github.com/LucaMingarelli/ecbdata"


